--- a/sistema/Sistema.Entidades/Sistema.Entidades.csproj
+++ b/sistema/Sistema.Entidades/Sistema.Entidades.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Articulo.cs" />
     <Compile Include="Categoria.cs" />
+    <Compile Include="Ingreso.cs" />
     <Compile Include="persona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Usuarios.cs" />
