--- a/sistema/sistema.presentacion/sistema.presentacion.csproj
+++ b/sistema/sistema.presentacion/sistema.presentacion.csproj
@@ -106,8 +106,15 @@
     <Compile Include="frmususario.Designer.cs">
       <DependentUpon>frmususario.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmvistaproveedor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmvistaproveedor.Designer.cs">
+      <DependentUpon>frmvistaproveedor.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Variables.cs" />
     <EmbeddedResource Include="frmArticulo.resx">
       <DependentUpon>frmArticulo.cs</DependentUpon>
     </EmbeddedResource>
@@ -134,6 +141,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmususario.resx">
       <DependentUpon>frmususario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmvistaproveedor.resx">
+      <DependentUpon>frmvistaproveedor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -272,6 +282,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\salidaooo.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Cancel_40972.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
